--- a/common/.config/taskfiles/upstream/Taskfile-commondocs.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-commondocs.yml
@@ -9,7 +9,7 @@ tasks:
   clean: rm -rf {{.COMMON_FOLDER}}
 
   clone:
-    deps:
+    cmds:
       - rm -rf {{.COMMON_FOLDER}}
       - git clone --depth=1 {{.COMMON_FILES_URL}} {{.COMMON_FOLDER}}
       - rm -rf {{.COMMON_FOLDER}}/.git
