--- a/common/.config/taskfiles/Taskfile-vscode.yml
+++ b/common/.config/taskfiles/Taskfile-vscode.yml
@@ -33,4 +33,4 @@ tasks:
         done <<< "$TASK_LIST"
         jq --arg tasks "${TASKS%?}]" '.tasks = ($tasks | fromjson)' "$TMP" > '{{.TASKS_FILE}}'
       - >
-        {{.NPM_BINARY_HANDLE}}prettier --write '{{.TASKS_FILE}}'
+        {{.NPX_HANDLE}}prettier --write '{{.TASKS_FILE}}'
