--- a/common/.config/taskfiles/Taskfile-fix.yml
+++ b/common/.config/taskfiles/Taskfile-fix.yml
@@ -23,7 +23,7 @@ tasks:
       **Example fixing all JS/TS files in a project:**
       `task fix:js`
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}eslint --fix {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
+      - '{{.NPX_HANDLE}}eslint --fix {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   json:
     deps:
@@ -42,7 +42,7 @@ tasks:
       **Example looping through project:**
       `task fix:json`
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}eslint --fix --format pretty --ext .json {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
+      - '{{.NPX_HANDLE}}eslint --fix --format pretty --ext .json {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   misc:
     deps:
@@ -147,7 +147,7 @@ tasks:
 
       For more information, see [Prettier's website](https://prettier.io/).
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}prettier --ignore-path {{.PRETTIERIGNORE_CONFIG}} --write {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
+      - '{{.NPX_HANDLE}}prettier --ignore-path {{.PRETTIERIGNORE_CONFIG}} --write {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   python:
     deps:
@@ -234,10 +234,10 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          {{.NPM_BINARY_HANDLE}}shellcheck -f diff {{.CLI_ARGS}} | git apply
+          {{.NPX_HANDLE}}shellcheck -f diff {{.CLI_ARGS}} | git apply
         {{else}}
           find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) \
-            -print0 | xargs -0 {{.NPM_BINARY_HANDLE}}shellcheck -f diff | git apply
+            -print0 | xargs -0 {{.NPX_HANDLE}}shellcheck -f diff | git apply
         {{end}}
 
   xml:
@@ -256,7 +256,7 @@ tasks:
       **Example fixing specific `.xml` file(s):**
       `task fix:xml -- 'file_name.xml'`
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}eslint --fix --format pretty --ext .xml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
+      - '{{.NPX_HANDLE}}eslint --fix --format pretty --ext .xml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   yaml:
     desc: Autofix YML files
@@ -333,4 +333,4 @@ tasks:
       **Example fixing specific `.yml` file(s):**
       `task fix:yaml:order -- 'file_name.{yml,yaml}'`
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}eslint --format pretty --fix --ext yml,yaml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
+      - '{{.NPX_HANDLE}}eslint --format pretty --fix --ext yml,yaml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
