--- a/common/.config/taskfiles/lint/Taskfile-markdown.yml
+++ b/common/.config/taskfiles/lint/Taskfile-markdown.yml
@@ -24,9 +24,9 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          {{.NPM_BINARY_HANDLE}}remark {{.CLI_ARGS}}
+          {{.NPX_HANDLE}}remark {{.CLI_ARGS}}
         {{else}}
-          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 | xargs -0 -r -n1 {{.NPM_BINARY_HANDLE}}remark
+          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 | xargs -0 -r -n1 {{.NPX_HANDLE}}remark
         {{end}}
 
   markdown:links:
@@ -49,7 +49,7 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          {{.NPM_BINARY_HANDLE}}markdown-link-check {{.CLI_ARGS}}
+          {{.NPX_HANDLE}}markdown-link-check {{.CLI_ARGS}}
         {{else}}
-          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 | xargs -0 -r -n1 {{.NPM_BINARY_HANDLE}}markdown-link-check
+          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 | xargs -0 -r -n1 {{.NPX_HANDLE}}markdown-link-check
         {{end}}
