--- a/common/.config/taskfiles/npm/Taskfile.yml
+++ b/common/.config/taskfiles/npm/Taskfile.yml
@@ -118,7 +118,7 @@ tasks:
     deps:
       - :install:software:fpm
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}fpm -s npm -t {{.FPM_TARGET}}
+      - '{{.NPX_HANDLE}}fpm -s npm -t {{.FPM_TARGET}}
         -p {{.BINARY_BUILD_FOLDER}}/{{.NPM_PACKAGE_NAME}}-{{.NPM_PACKAGE_VERSION}}-{{.SYSTEM}}-{{.ARCHITECTURE}}.{{.FILE_EXTENSION}}
         --architecture {{.ARCHITECTURE}} .'
 
@@ -127,7 +127,7 @@ tasks:
       - :install:local:modules
       - :install:npm:nest
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}nest build'
+      - '{{.NPX_HANDLE}}nest build'
       - task: build:nest:after
 
   build:nest:after:
@@ -140,7 +140,7 @@ tasks:
       - :install:local:modules
       - :install:npm:pkg
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}pkg package.json'
+      - '{{.NPX_HANDLE}}pkg package.json'
 
   build:release: 'true'
 
@@ -169,7 +169,7 @@ tasks:
       - :install:software:jq
     desc: Remove unused dependencies
     cmds:
-      - "{{.NPM_BINARY_HANDLE}}depcheck --json | jq -r '.dependencies[]' | xargs -n1 npm uninstall --save"
+      - "{{.NPX_HANDLE}}depcheck --json | jq -r '.dependencies[]' | xargs -n1 npm uninstall --save"
 
   start:
     deps:
@@ -177,14 +177,14 @@ tasks:
       - :install:npm:nest
     desc: Run the application
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}nest start'
+      - '{{.NPX_HANDLE}}nest start'
 
   start:debug:
     deps:
       - :install:local:modules
       - :install:npm:nest
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}nest start --watch'
+      - '{{.NPX_HANDLE}}nest start --watch'
 
   start:inspect:
     deps:
@@ -194,14 +194,14 @@ tasks:
       - :install:npm:ts-node
     desc: Run the application in `watch` mode and open DevTools
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}ndb nest start --watch'
+      - '{{.NPX_HANDLE}}ndb nest start --watch'
 
   start:inspect:legacy:
     deps:
       - :install:local:modules
       - :install:npm:nest
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}nest start --debug --watch'
+      - '{{.NPX_HANDLE}}nest start --debug --watch'
 
   start:prod:
     deps:
@@ -218,7 +218,7 @@ tasks:
       - :install:npm:nest
     desc: Run the application in `production` and `watch` mode and open DevTools
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}ndb nodemon'
+      - '{{.NPX_HANDLE}}ndb nodemon'
 
   test:
     deps:
@@ -226,7 +226,7 @@ tasks:
       - :install:npm:jest
     desc: Run the unit tests for an NPM project
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}jest'
+      - '{{.NPX_HANDLE}}jest'
 
   test:coverage:
     deps:
@@ -234,7 +234,7 @@ tasks:
       - :install:npm:jest
     desc: Generate code coverage assets
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}jest --coverage'
+      - '{{.NPX_HANDLE}}jest --coverage'
 
   test:dashboard:
     deps:
@@ -242,7 +242,7 @@ tasks:
       - :install:npm:majestic
     desc: Run and manage test cases from a web interface (powered by `majestic`)
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}majestic --debug'
+      - '{{.NPX_HANDLE}}majestic --debug'
 
   test:debug:
     deps:
@@ -250,7 +250,7 @@ tasks:
       - :install:npm:jest
     desc: Debug tests in `watch` mode
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}jest --watch'
+      - '{{.NPX_HANDLE}}jest --watch'
 
   test:e2e: 'true'
 
@@ -263,11 +263,11 @@ tasks:
       - :install:npm:ts-node
     desc: Debug tests with DevTools in `watch` mode
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}ndb nodemon --config .common/nodemon-jest.json'
+      - '{{.NPX_HANDLE}}ndb nodemon --config .common/nodemon-jest.json'
 
   typesync:
     deps:
       - :install:npm:typesync
     desc: Install missing type definitions
     cmds:
-      - '{{.NPM_BINARY_HANDLE}}typesync'
+      - '{{.NPX_HANDLE}}typesync'
